--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@stripe/react-stripe-js": "^2.6.0",
+    "@stripe/stripe-js": "^3.0.8",
     "axios": "^1.6.7",
     "date-fns": "^3.4.0",
     "firebase": "^9.19.1",
+    "flowbite": "^2.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
